# bibtex-manipulator

./: README.md  arguments.py  bib_filter.py  bib_manager.py  example.bib  main.py  pyproject.toml
