[tool.poetry]
name = "bibtex_manipulator"
version = "0.1.0"
description = ""
authors = ["DJE98 <dennis@eisermann.one>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bibtexparser = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
